# itmo-ir-search

./: .gitignore  LICENSE  README.md  pyproject.toml  template.tex
data/mirage/: dataset.json
hw_0_warmup/: report.tex
hw_1/: report.tex  solution.ipynb
hw_1/data/: dostoevsky.txt  tolstoy.txt
hw_2/: report.tex  solution.ipynb
hw_3/: report.tex  solution.ipynb
hw_4/: report.tex  solution.ipynb
hw_5/: report.tex  solution.ipynb
