[project]
name = "itmo-ir-search"
version = "0.1.0"
requires-python = ">=3.12"

dependencies = [
    "accelerate>=1.13.0",
    "bert-score==0.3.13",
    "catboost>=1.2.10",
    "datasets>=4.8.4",
    "ipykernel>=7.2.0",
    "ir-measures>=0.4.3",
    "matplotlib>=3.10.8",
    "nltk>=3.9.4",
    "numpy>=2.4.4",
    "pandas>=3.0.1",
    "pytrec-eval>=0.5",
    "rank-bm25>=0.2.2",
    "requests>=2.33.0",
    "ruff>=0.15.8",
    "scikit-learn>=1.8.0",
    "sentence-transformers>=5.4.0",
    "spacy>=3.8.14",
    "torch>=2.11.0",
    "tqdm>=4.67.3",
    "transformers==5.0.0",
]

[tool.uv.sources]
torch = [
  { index = "pytorch-cu130", marker = "sys_platform == 'linux' or sys_platform == 'win32'" },
]
torchvision = [
  { index = "pytorch-cu130", marker = "sys_platform == 'linux' or sys_platform == 'win32'" },
]

[[tool.uv.index]]
name = "pytorch-cu130"
url = "https://download.pytorch.org/whl/cu130"
explicit = true
